[package]
name = "cbor-json"
version = "0.1.0"
authors = ["Frank Moreno <frankmoreno1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
juniper = "0.14"